# executiontime

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  demo.py  publish.sh  pyproject.toml  requirements.txt  setup.py  test.py  test_executiontime.py
executiontime/: __init__.py
tests/: test_executiontime.py
