[tool.poetry]
name = "executiontime"
version = "0.4.4"
description = "A simple function decorator to display its execution time on the console or in the logs."
authors = ["Timokasse <Timokasse@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: French",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
keywords = ["testing", "logging", "time", "performance", "execution"]
packages = [{ include = "executiontime" }]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.5"
black = "^25.1.0"
mypy = "^1.15.0"
types-colorama = "^0.4.15.20240311"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.pylint.format]
# Maximum number of characters on a single line.
max-line-length = 160
